--- a/public/login.html
+++ b/public/login.html
@@ -201,9 +201,7 @@
 
                 firebaseInitialized = true;
                 console.log('✅ 로그인 페이지에서 Firebase 클라이언트 초기화 성공');
-            } else {
-                console.warn('⚠️ Firebase 설정을 가져올 수 없음');
-            }
+            } else console.warn('⚠️ Firebase 설정을 가져올 수 없음');
         } catch (error) {
             console.error('❌ Firebase 초기화 오류:', error);
         }
@@ -243,11 +241,33 @@
                     const userCredential = await auth.signInWithEmailAndPassword(email, password);
                     const user = userCredential.user;
                     console.log('✅ 로그인 성공:', user.email);
+                    console.log('✅ 로그인 성공:', user.uid);
+
+                    // 서버에 Firebase ID 토큰을 전달
+                    const idToken = await user.getIdToken();
+
+                    const response = await fetch('/verify-token', {
+                        method: 'GET',
+                        headers: {
+                            'Authorization': 'Bearer ' + idToken
+                        },
+                        credentials: 'include'
+                    });
+
+                    const result = await response.json();
+                    console.log('서버 응답:', result);
+
+                    if (result.success && result.redirectUrl) {
+                        window.location.href = result.redirectUrl;
+                    } else {
+                        showError('서버 토큰 검증 실패: ' + (result.message || '알 수 없는 오류'));
+                        setLoading(false);
+                    }
 
                     // 필요한 경우 sessionStorage 등에 저장
-                    sessionStorage.setItem('uid', user.uid);
+                    // sessionStorage.setItem('uid', user.uid);
                     // window.location.href = '/save-uid?uid=' + encodeURIComponent(user.uid);
-                    window.location.href = '/credit-shop'
+                    // window.location.href = '/credit-shop'
                 } else {
                     showError('Firebase 인증이 초기화되지 않았습니다.');
                     setLoading(false);
