--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -565,7 +565,6 @@
     window.addEventListener('DOMContentLoaded', async () => {
         // Firebase 초기화
         await initializeFirebase();
-
         let uid ='';
 
         // 파베 초기화 된 경우에만 사용자 정보 조회 가능케
@@ -589,6 +588,35 @@
                 console.error('에러메시지', err.message);
             }
             if (!uid) return window.location.href = '/login';
+        }
+
+        // 만약 크레딧이 선택됐을 경우 자동 선택
+        const selectedCredit = window.selectedCredit
+        console.log("크레딧샵에서 세션값 확인용", selectedCredit);
+
+        if (selectedCredit && selectedCredit !== 'null') {
+            const targetOption = document.querySelector(`[data-credit="${selectedCredit}"]`);
+            if (targetOption) {
+                // 옵션 선택
+                document.querySelectorAll('.credit-option').forEach(opt => opt.classList.remove('selected'));
+                targetOption.classList.add('selected');
+                selectedOption = targetOption;
+
+                // 상품 정보 표시
+                const productName = targetOption.querySelector('.credit-amount').textContent;
+                const price = targetOption.getAttribute('data-price');
+                document.querySelector('.pay-product').textContent = `${productName}`;
+                document.querySelector('.pay-amount').textContent = `${Number(price).toLocaleString()}원`;
+
+                // 잠깐 대기 후 자동으로 결제 진행
+                document.getElementById('pg-modal').classList.remove('hidden');
+
+
+                console.log(`${selectedCredit} 크레딧 자동 결제 시작`);
+                requestpay();
+            }
+            // sessionStorage에서 selectedCredit 제거 (한 번만 사용)
+            sessionStorage.removeItem('selectedCredit');
         }
     });
 
