[혜원]이미지 비율 다시 맞출것

--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -223,12 +223,15 @@
             padding-bottom: 50px;
         }
 
-
-
         @keyframes bangbang {
             0%   { transform: rotateY(0deg); }
             100% { transform: rotateY(360deg); }
         }
+
+        .credit-option:nth-of-type(n+4):nth-of-type(-n+6) .img_wrap {
+            width: 200px;
+        }
+
 
         /*.credit-option:nth-of-type(1):hover .img_wrap {*/
         /*    animation: bangbang 3s linear infinite;*/
@@ -508,7 +511,7 @@
         <div class="credit-option" data-credit="5000" data-price="30000">
             <div class="img_wrap">
                 <img src="/img/calenderCoin3d.png" alt="이미지">
-                <img src="/img/key5.png" alt="열쇠상자">
+                <img src="/img/key6.png" alt="열쇠상자">
                 <img src="/img/calenderCoins3d.png" alt="이미지">
             </div>
             <div class="credit-amount">5,000 크레딧</div>
