[혜원]웹훅테스트4

--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -775,7 +775,7 @@
             buyer_email: currentUserEmail,
             buyer_name: currentUserName,
             custom_data: {
-                uid: currentUserEmail
+                uid: data.uid;
             }
         }, function (rsp) {
             console.log('=== 아임포트 응답 전체 ===');
