--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -676,6 +676,7 @@
             if (response.success && response.userExists) {
                 // 🔥 파이어베이스에 결제 정보 저장
                 await savePaymentToFirebase(response.paymentData, response.nickname);
+                console.log("설마 늦어서 그러냐")
                 redirectSuccess(response.paymentData, response.nickname);
             } else {
                 alert('❌ 사용자 검증 실패: ' + response.message);
@@ -697,14 +698,21 @@
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${nickname}`
+                    'Authorization': `Bearer ${encodeURIComponent(nickname)}`
                 },
-                body: JSON.stringify(paymentData)
+                body: JSON.stringify(paymentData),
+                credentials: 'include'
             });
 
-            if (!res.ok) throw new Error(`서버 오류: ${res.status}`);
             const result = await res.json();
             console.log('✅ 서버에서 결제 정보 저장 성공:', result);
+
+            if (result.success) {
+                // 💡 서버에서 저장 끝난 다음 리다이렉트하는 게 안전함! savedData는 서버에서 보내는 값.
+                redirectSuccess(result.savedData || paymentData, nickname);
+            } else {
+                alert('결제 저장 실패: ' + result.message);
+            }
 
             // 결제는 성공했지만 저장 실패 시 에러 로그만 남기고 진행
         } catch (error) { console.error('❌ 파이어베이스 결제 정보 저장 실패:', error);}
