--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -647,7 +647,7 @@
         // 결제 데이터 준비
         const paymentData = {
             orderId: rsp.merchant_uid,
-            amount: selectedOption.getAttribute('data-price'),
+            price: selectedOption.getAttribute('data-price'),
             orderName: selectedOption.querySelector('.credit-amount').textContent,
             method: rsp.pay_method || '카드',
             paymentKey: rsp.imp_uid,
@@ -751,7 +751,7 @@
     // 구매하기 버튼 누르면 실행됨
     function requestpay() {
         const productName = `${selectedOption.querySelector('.credit-amount').textContent}`;
-        const amount = parseInt(selectedOption.getAttribute('data-price'));
+        const price = parseInt(selectedOption.getAttribute('data-price'));
         console.log('uid값 확인', uid);
 
 
@@ -763,7 +763,7 @@
             pay_method: 'card',
             merchant_uid: `payment-${new Date().getTime()}`,
             name: productName,
-            amount: amount,
+            price: price,
             buyer_email: currentUserEmail,
             buyer_name: currentUserName,
             custom_data: {
@@ -785,7 +785,7 @@
             } else if (rsp.success === true && rsp.imp_uid && rsp.merchant_uid) {
                 console.log('결제 완료 처리 (imp_uid와 merchant_uid 존재)');
                 sessionStorage.setItem('orderId', rsp.merchant_uid);
-                sessionStorage.setItem('amount', amount.toString());
+                sessionStorage.setItem('price', price.toString());
                 sessionStorage.setItem('orderName', productName);
                 sessionStorage.setItem('method', rsp.pay_method || '카드');
                 sessionStorage.setItem('paymentKey', rsp.imp_uid);
@@ -796,7 +796,7 @@
             // 현재 success도, error_code도 undefined이기에 단순하게 imp_uid와 merchant_uid 존재만으로 성공 판단
                 console.log('결제 완료 처리 (imp_uid와 merchant_uid 존재)');
                 sessionStorage.setItem('orderId', rsp.merchant_uid);
-                sessionStorage.setItem('amount', amount.toString());
+                sessionStorage.setItem('price', price.toString());
                 sessionStorage.setItem('orderName', productName);
                 sessionStorage.setItem('method', rsp.pay_method || '카드');
                 sessionStorage.setItem('paymentKey', rsp.imp_uid);
