--- a/public/success.html
+++ b/public/success.html
@@ -199,7 +199,7 @@
         const userIdEl = document.getElementById('userId');
         const orderIdEl = document.getElementById('orderId');
         const orderNameEl = document.getElementById('orderName');
-        const amountEl = document.getElementById('amount');
+        const amountEl = document.getElementById('price');
         const methodEl = document.getElementById('method');
         const creditAmountEl = document.getElementById('creditAmount');
 
