--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -606,7 +606,7 @@
                 console.error('에러코드', err.code);
                 console.error('에러메시지', err.message);
             }
-            if (!uid) return window.location.href = '/login';
+            // if (!uid) return window.location.href = '/login';
         }
 
         // 만약 크레딧이 선택됐을 경우 자동 선택
@@ -707,12 +707,9 @@
             const result = await res.json();
             console.log('✅ 서버에서 결제 정보 저장 성공:', result);
 
-            if (result.success) {
-                // 💡 서버에서 저장 끝난 다음 리다이렉트하는 게 안전함! savedData는 서버에서 보내는 값.
-                redirectSuccess(result.savedData || paymentData, nickname);
-            } else {
-                alert('결제 저장 실패: ' + result.message);
-            }
+            // 💡 서버에서 저장 끝난 다음 리다이렉트하는 게 안전함! savedData는 서버에서 보내는 값.
+            if (result.success) redirectSuccess(result.savedData || paymentData, nickname);
+            else alert('결제 저장 실패: ' + result.message);
 
             // 결제는 성공했지만 저장 실패 시 에러 로그만 남기고 진행
         } catch (error) { console.error('❌ 파이어베이스 결제 정보 저장 실패:', error);}
@@ -766,9 +763,7 @@
             amount: amount,
             buyer_email: currentUserEmail,
             buyer_name: currentUserName,
-            custom_data: {
-                uid: uid
-            }
+            custom_data: {  uid: uid }
         }, function (rsp) {
             console.log('=== 아임포트 응답 전체 ===');
             console.log('포트사 거래번호:', rsp.imp_uid);
