--- a/public/login.html
+++ b/public/login.html
@@ -330,11 +330,8 @@
             const resultData = await response.json();
             console.log('서버 응답:', resultData);
 
-            if (resultData.success && resultData.redirectUrl) {
-                window.location.href = resultData.redirectUrl;
-            } else {
-                alert('토큰 검증 실패: ' + (resultData.message || '알 수 없는 오류'));
-            }
+            if (resultData.success && resultData.redirectUrl) window.location.href = resultData.redirectUrl;
+            else alert('토큰 검증 실패: ' + (resultData.message || '알 수 없는 오류'));
 
         } catch (err) {
             console.error('❌ Google 로그인 실패:', err);
