[혜원] 로그인 백업

--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
         }
 
         body {
-            background-color: #f5f7fa;
+            background-color: #000;
             color: #333;
             line-height: 1.6;
             padding: 50px 20px;
@@ -35,12 +35,6 @@
             border-radius: 16px;
             padding: 40px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-        }
-
-        .logo {
-            width: 60px;
-            height: 60px;
-            margin: 0 auto 20px;
         }
 
         h1 {
@@ -89,7 +83,7 @@
 
         input:focus {
             outline: none;
-            border-color: #4a90e2;
+            border-color: #229e49;
             box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
         }
 
@@ -103,7 +97,7 @@
         button {
             width: 100%;
             padding: 15px;
-            background-color: #4a90e2;
+            background-color: #229e49;
             color: white;
             border: none;
             border-radius: 8px;
@@ -115,7 +109,7 @@
         }
 
         button:hover {
-            background-color: #357ABD;
+            background-color: #176a36;
         }
 
         button:disabled {
