--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -566,7 +566,6 @@
 
                 const email = data.email || '';
                 const userId = email.split('@')[0];  // @ 앞부분
-                currentUserEmail = email;
                 currentUserName = userId;
 
                 const userIdSpan = document.getElementById('user-id');
@@ -580,8 +579,16 @@
                     const userDoc = await db.collection('User').doc(uid).get();
                     if (userDoc.exists) {
                         const userData = userDoc.data();
-                        console.log('🎉 Firestore에서 가져온 displayName:', userData.displayName);
-                        userIdSpan.textContent = userData.displayName;
+
+                        // displayName 필드가 있으면 우선 사용하고, 없으면 Dispalyname (오타?) 필드 시도
+                        const displayName = userData.displayName || userData.DisplayName;
+
+                        if (displayName) {
+                            console.log('🎉 Firestore에서 가져온 displayName:', displayName);
+                            userIdSpan.textContent = displayName;
+                        } else {
+                            console.log('⚠️ 사용자 문서에는 displayName 또는 Dispalyname 필드가 없음');
+                        }
                     } else console.log('⚠️ 웹사이트에 가입되지 않은 사용자:', uid);
                 } catch (error) { console.error('❌ Firestore에서 displayName을 불러오는 중 오류:', error); }
 
