--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -692,7 +692,7 @@
 
             // 💡 서버에서 저장 끝난 다음 리다이렉트하는 게 안전함! savedData는 서버에서 보내는 값.
             if (result.success) redirectSuccess(result.savedData || paymentData, nickname);
-            else alert('결제 저장 실패: ' + result.message);
+            // else alert('결제 저장 실패: ' + result.message);
 
             // 결제는 성공했지만 저장 실패 시 에러 로그만 남기고 진행
         } catch (error) { console.error('❌ 파이어베이스 결제 정보 저장 실패:', error);}
